--- a/P002992.opf/meta.yml
+++ b/P002992.opf/meta.yml
@@ -1,7 +1,7 @@
-id: opecha:P002992
+id: P002992
 initial_creation_type: ocr
 source_metadata:
   id: bdr:W1KG8897
   title: གསུང་འབུམ། ཤཱཀྱ་མཆོག་ལྡན། ༼རྫོང་སར་ཁམས་བྱེའི་གློག་ཀླད་པར་མ།༽
-  volume: ''
   author: ''
+  volumes: {}
