--- a/P002992.opf/meta.yml
+++ b/P002992.opf/meta.yml
@@ -4,4 +4,124 @@ source_metadata:
   id: bdr:W1KG8897
   title: གསུང་འབུམ། ཤཱཀྱ་མཆོག་ལྡན། ༼རྫོང་སར་ཁམས་བྱེའི་གློག་ཀླད་པར་མ།༽
   author: ''
-  volumes: {}
+  volumes:
+    ceff1b8f4057499cbe01bd1d969674f3:
+      image_group_id: I1KG8943
+      title: ''
+      volume_number: 1
+      total_pages: 824
+    1ad5b9687866448997fd44d657c1c04c:
+      image_group_id: I1KG8944
+      title: ''
+      volume_number: 2
+      total_pages: 874
+    5200b6fdc09046f4bba058cc7170687d:
+      image_group_id: I1KG8945
+      title: ''
+      volume_number: 3
+      total_pages: 726
+    8c40930c615546f4a15c600b5ccde088:
+      image_group_id: I1KG8946
+      title: ''
+      volume_number: 4
+      total_pages: 808
+    767d7bcba6a9492ca4b8ed354218e34c:
+      image_group_id: I1KG8947
+      title: ''
+      volume_number: 5
+      total_pages: 624
+    ff620616e75648da91ddf46b85ee2a14:
+      image_group_id: I1KG8948
+      title: ''
+      volume_number: 6
+      total_pages: 892
+    16728f88a04b45eb922a375420d72b36:
+      image_group_id: I1KG8949
+      title: ''
+      volume_number: 7
+      total_pages: 810
+    8dded09c4c3f4299b5452568c9048c6d:
+      image_group_id: I1KG8950
+      title: ''
+      volume_number: 8
+      total_pages: 732
+    d2aeabd492754c21b3adb1c153c9ac39:
+      image_group_id: I1KG8951
+      title: ''
+      volume_number: 9
+      total_pages: 940
+    4181d2fa186242488921604c8907e3a5:
+      image_group_id: I1KG8952
+      title: ''
+      volume_number: 10
+      total_pages: 766
+    6082c97a2e2740419ae87364fbdef6a9:
+      image_group_id: I1KG8953
+      title: ''
+      volume_number: 11
+      total_pages: 754
+    a227330c7e54419a9c608c12bfd93d49:
+      image_group_id: I1KG8954
+      title: ''
+      volume_number: 12
+      total_pages: 810
+    8db8a0eab63142eea8fb68edf63a2630:
+      image_group_id: I1KG8955
+      title: ''
+      volume_number: 13
+      total_pages: 884
+    98439c211b504f009d5490860945ec5d:
+      image_group_id: I1KG8956
+      title: ''
+      volume_number: 14
+      total_pages: 902
+    305c79f7b22143d7af65ee5ded988b01:
+      image_group_id: I1KG8957
+      title: ''
+      volume_number: 15
+      total_pages: 958
+    f5260210413548739ab87cc9153e881d:
+      image_group_id: I1KG8958
+      title: ''
+      volume_number: 16
+      total_pages: 802
+    bd9776d3d91b4195aa1c2a17b2db0ea0:
+      image_group_id: I1KG8959
+      title: ''
+      volume_number: 17
+      total_pages: 818
+    e3e8837323ee486eb6ab4e49aa7027eb:
+      image_group_id: I1KG8960
+      title: ''
+      volume_number: 18
+      total_pages: 902
+    bdbc311d019c48109125f6255f4c9e1c:
+      image_group_id: I1KG8961
+      title: ''
+      volume_number: 19
+      total_pages: 1072
+    f52f7eb8407c4b38b2bef7dd29754688:
+      image_group_id: I1KG8962
+      title: ''
+      volume_number: 20
+      total_pages: 792
+    aab73da3aaed45a099b6e5721c5677e0:
+      image_group_id: I1KG8963
+      title: ''
+      volume_number: 21
+      total_pages: 484
+    af394b85df6542a78967bcde8944c402:
+      image_group_id: I1KG8964
+      title: ''
+      volume_number: 22
+      total_pages: 768
+    0e1fdf316a7740d7a3a5914b30b82f69:
+      image_group_id: I1KG8965
+      title: ''
+      volume_number: 23
+      total_pages: 712
+    b4784b0b76124ecc8fbc1feb45eb7290:
+      image_group_id: I1KG8966
+      title: ''
+      volume_number: 24
+      total_pages: 470
