--- a/P002992.opf/layers/v001/Pagination.yml
+++ b/P002992.opf/layers/v001/Pagination.yml
@@ -1,5 +1,5 @@
 id: adbeedf8fca24f8fa6d56a0524d9cbfc
-annotation_type: pagination
+annotation_type: Pagination
 revision: '00001'
 annotations:
   231bc954f047417095ec1ed3162bb6e0:
