--- a/P002992.opf/layers/v002/Pagination.yml
+++ b/P002992.opf/layers/v002/Pagination.yml
@@ -1,5 +1,5 @@
 id: 5f0ad46993494c39b3f405c5558c5660
-annotation_type: pagination
+annotation_type: Pagination
 revision: '00001'
 annotations:
   cda8d2231808452c9e84396cebebf7f6:
