--- a/P002992.opf/layers/v003/Pagination.yml
+++ b/P002992.opf/layers/v003/Pagination.yml
@@ -1,5 +1,5 @@
 id: 1e03a54d7bc4476b942aee521d4f73ae
-annotation_type: pagination
+annotation_type: Pagination
 revision: '00001'
 annotations:
   60fef41f356e4ba19c43fe88d506b5c6:
