--- a/P002992.opf/layers/v004/Pagination.yml
+++ b/P002992.opf/layers/v004/Pagination.yml
@@ -1,5 +1,5 @@
 id: cbc62f57aafc4f6089154f1324ad4440
-annotation_type: pagination
+annotation_type: Pagination
 revision: '00001'
 annotations:
   edec69fecd76485da34c200860473b79:
