--- a/P002992.opf/layers/v005/Pagination.yml
+++ b/P002992.opf/layers/v005/Pagination.yml
@@ -1,5 +1,5 @@
 id: e86434f20a6a4b17abe9a6081da43722
-annotation_type: pagination
+annotation_type: Pagination
 revision: '00001'
 annotations:
   5ae1a0c7ce5b46d19377ef4e103ae044:
