--- a/P002992.opf/layers/v006/Pagination.yml
+++ b/P002992.opf/layers/v006/Pagination.yml
@@ -1,5 +1,5 @@
 id: 6b63fba941924f3790ddd5fd4b90397c
-annotation_type: pagination
+annotation_type: Pagination
 revision: '00001'
 annotations:
   7a41f91c31944bd4b7b4b8ab7f22e482:
