--- a/P002992.opf/layers/v007/Pagination.yml
+++ b/P002992.opf/layers/v007/Pagination.yml
@@ -1,5 +1,5 @@
 id: 588ce3c84873498f9d4eceeeb23036d0
-annotation_type: pagination
+annotation_type: Pagination
 revision: '00001'
 annotations:
   9756df0108904bcfbb124ea310634946:
