--- a/P002992.opf/layers/v008/Pagination.yml
+++ b/P002992.opf/layers/v008/Pagination.yml
@@ -1,5 +1,5 @@
 id: 61cf3c6824544452bcdfa4ecec2ea880
-annotation_type: pagination
+annotation_type: Pagination
 revision: '00001'
 annotations:
   22e74d96e1ca46fa86af9d52357bf258:
