--- a/P002992.opf/layers/v010/Pagination.yml
+++ b/P002992.opf/layers/v010/Pagination.yml
@@ -1,5 +1,5 @@
 id: ffb99707931f4e3bbe89973894291a58
-annotation_type: pagination
+annotation_type: Pagination
 revision: '00001'
 annotations:
   e0cb6402ec8a43298958c9c21fddd9dd:
