--- a/P002992.opf/layers/v011/Pagination.yml
+++ b/P002992.opf/layers/v011/Pagination.yml
@@ -1,5 +1,5 @@
 id: 1a8c2925848443fda3db6ae2044a1c2b
-annotation_type: pagination
+annotation_type: Pagination
 revision: '00001'
 annotations:
   616a29628474414aafe7cacc08027c4d:
