--- a/P002992.opf/layers/v012/Pagination.yml
+++ b/P002992.opf/layers/v012/Pagination.yml
@@ -1,5 +1,5 @@
 id: 95cd41a0bbcb43218db19484f604cdcc
-annotation_type: pagination
+annotation_type: Pagination
 revision: '00001'
 annotations:
   1f32d1505d9b4a8d9b04d15926c71598:
