--- a/P002992.opf/layers/v013/Pagination.yml
+++ b/P002992.opf/layers/v013/Pagination.yml
@@ -1,5 +1,5 @@
 id: 8b6b972cca1b43579eef7a2d0659dcb5
-annotation_type: pagination
+annotation_type: Pagination
 revision: '00001'
 annotations:
   d414b035b42643bc9000c7f3ede31b12:
