--- a/P002992.opf/layers/v014/Pagination.yml
+++ b/P002992.opf/layers/v014/Pagination.yml
@@ -1,5 +1,5 @@
 id: 1419048e0a99489d8b73a6e67cbf9ebf
-annotation_type: pagination
+annotation_type: Pagination
 revision: '00001'
 annotations:
   d0f560cb23ba4a4884a26e3b27d8e7e2:
