--- a/P002992.opf/layers/v015/Pagination.yml
+++ b/P002992.opf/layers/v015/Pagination.yml
@@ -1,5 +1,5 @@
 id: e83eae1a263949949bfc95d7dd728558
-annotation_type: pagination
+annotation_type: Pagination
 revision: '00001'
 annotations:
   407b0a2c72bb43059c029a72ddcda71f:
