--- a/P002992.opf/layers/v016/Pagination.yml
+++ b/P002992.opf/layers/v016/Pagination.yml
@@ -1,5 +1,5 @@
 id: 212d6100d18f457a828d1c3a675c6298
-annotation_type: pagination
+annotation_type: Pagination
 revision: '00001'
 annotations:
   dc51ca8927674f33aeb33934f718c4f7:
