--- a/P002992.opf/layers/v017/Pagination.yml
+++ b/P002992.opf/layers/v017/Pagination.yml
@@ -1,5 +1,5 @@
 id: 15511c93e750449e861f45e0f213c7c0
-annotation_type: pagination
+annotation_type: Pagination
 revision: '00001'
 annotations:
   c809818e07cf4b61aacf92457582d164:
