--- a/P002992.opf/layers/v018/Pagination.yml
+++ b/P002992.opf/layers/v018/Pagination.yml
@@ -1,5 +1,5 @@
 id: b5c6b31487ac41b79a442c4727aa2759
-annotation_type: pagination
+annotation_type: Pagination
 revision: '00001'
 annotations:
   21b5a94bfc944e7293056b3d5f37869c:
