--- a/P002992.opf/layers/v019/Pagination.yml
+++ b/P002992.opf/layers/v019/Pagination.yml
@@ -1,5 +1,5 @@
 id: 58d17cf6d23a45469ae64acb44d4695a
-annotation_type: pagination
+annotation_type: Pagination
 revision: '00001'
 annotations:
   e9b7451cc8cf4c378687fadc55fd37dc:
