--- a/P002992.opf/layers/v020/Pagination.yml
+++ b/P002992.opf/layers/v020/Pagination.yml
@@ -1,5 +1,5 @@
 id: d614c7771aea40b6916a818c7bc4074c
-annotation_type: pagination
+annotation_type: Pagination
 revision: '00001'
 annotations:
   6d6cd04b9952414682a6ef32d42dc61a:
