--- a/P002992.opf/layers/v021/Pagination.yml
+++ b/P002992.opf/layers/v021/Pagination.yml
@@ -1,5 +1,5 @@
 id: cfbb64b2c55b4a1a8bd762711dee2f7b
-annotation_type: pagination
+annotation_type: Pagination
 revision: '00001'
 annotations:
   d3b06acaf4d14754bd83f12c5e8661d0:
