--- a/P002992.opf/layers/v022/Pagination.yml
+++ b/P002992.opf/layers/v022/Pagination.yml
@@ -1,5 +1,5 @@
 id: 48be37f0d29948c0ad8526da2373e362
-annotation_type: pagination
+annotation_type: Pagination
 revision: '00001'
 annotations:
   2fdd9c507ff44548b4eae4a961115190:
