--- a/P002992.opf/layers/v023/Pagination.yml
+++ b/P002992.opf/layers/v023/Pagination.yml
@@ -1,5 +1,5 @@
 id: 9cd920012d2446d6948a809381a949a9
-annotation_type: pagination
+annotation_type: Pagination
 revision: '00001'
 annotations:
   bd91544dd2304872aacd9bf0b6afa52b:
