--- a/P002992.opf/layers/v024/Pagination.yml
+++ b/P002992.opf/layers/v024/Pagination.yml
@@ -1,5 +1,5 @@
 id: df16181f240743679163d5425a47ba5a
-annotation_type: pagination
+annotation_type: Pagination
 revision: '00001'
 annotations:
   0f6810b7a0414c76afefe32a96b0602a:
