--- a/P002992.opf/layers/v009/Pagination.yml
+++ b/P002992.opf/layers/v009/Pagination.yml
@@ -1,5 +1,5 @@
 id: d59354da15c1442494a2caeba972df6b
-annotation_type: pagination
+annotation_type: Pagination
 revision: '00001'
 annotations:
   19ccd9edfb50410a94aa4f18f1e18861:
