--- a/P002992.opf/meta.yml
+++ b/P002992.opf/meta.yml
@@ -1,5 +1,7 @@
 id: P002992
 initial_creation_type: ocr
+created_at: 22/03/2020
+last_modified_at: 24/11/2021
 source_metadata:
   id: bdr:W1KG8897
   title: གསུང་འབུམ། ཤཱཀྱ་མཆོག་ལྡན། ༼རྫོང་སར་ཁམས་བྱེའི་གློག་ཀླད་པར་མ།༽
