--- a/P002992.opf/meta.yml
+++ b/P002992.opf/meta.yml
@@ -1,7 +1,7 @@
 id: P002992
 initial_creation_type: ocr
 created_at: 22/03/2020
-last_modified_at: 24/11/2021
+last_modified_at: 2021-12-17 10:33:05.473758
 source_metadata:
   id: bdr:W1KG8897
   title: གསུང་འབུམ། ཤཱཀྱ་མཆོག་ལྡན། ༼རྫོང་སར་ཁམས་བྱེའི་གློག་ཀླད་པར་མ།༽
@@ -151,3 +151,5 @@ source_metadata:
       volume_number: 24
       total_pages: 470
       base_file: v024.txt
+  access: http://purl.bdrc.io/admindata/AccessOpen
+  restrictedInChina: true
